changed background css

--- a/style.css
+++ b/style.css
@@ -58,10 +58,11 @@
     padding: 0;
     font-family: sans-serif;
     background: url('images/Background.png') no-repeat center center;
-    background-size: cover;
+    
     height: 100vh; /* Ensure it covers the entire viewport */
     overflow-y: scroll; /* Allow scrolling */
-    background-attachment: scroll;
+    background-attachment: fixed;
+    background-size: cover;
   }
   .card{
     color: var(--glass-background);
