--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     background-image: url('Background.png');
     background-repeat: no-repeat;
+    background-size: cover;
 }
 .content {
 
