Added background-attachment: scroll

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-image: url('Background.png');
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: scroll;
 }
 .content {
 
