--- a/style.css
+++ b/style.css
@@ -1,24 +1,21 @@
 body {
-    /*background-image: url('Background.png');
+    background-image: url('Background.png');
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: scroll;*/
+    
     margin: 0;
 }
 
-body::after {
-    content:"";
-    position:fixed; /* stretch a fixed position to the whole screen */
-    top:0;
-    height:100vh; /* fix for mobile browser address bar appearing disappearing */
-    left:0;
-    right:0;
-    z-index:-1; /* needed to keep in the background */
-    background: url("Background.png") center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+@supports ( -webkit-touch-callout : none) {
+    body {
+    background-attachment:scroll
+    }
+}
+    
+@supports not ( -webkit-touch-callout : none) {
+    body {
+    background-attachment: fixed;
+    }
 }
 
 .backgroundImage {
