--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@ body {
 
 @supports ( -webkit-touch-callout : none) {
     body {
-    background-attachment:scroll
+    background-attachment: scroll;
     }
 }
     
 @supports not ( -webkit-touch-callout : none) {
     body {
-    background-attachment: fixed;
+    background-attachment: fixed !important;
     }
 }
 
